add_library(Raverie)

raverie_setup_library(Raverie ${CMAKE_CURRENT_LIST_DIR} TRUE)

target_sources(Raverie
  PRIVATE
    ${CMAKE_CURRENT_LIST_DIR}/Any.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Any.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ArrayClass.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ArrayClass.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Base64.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Base64.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Binding.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Binding.hpp
    ${CMAKE_CURRENT_LIST_DIR}/CodeGenerator.cpp
    ${CMAKE_CURRENT_LIST_DIR}/CodeGenerator.hpp
    ${CMAKE_CURRENT_LIST_DIR}/CodeLocation.cpp
    ${CMAKE_CURRENT_LIST_DIR}/CodeLocation.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Color.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Color.hpp
    ${CMAKE_CURRENT_LIST_DIR}/CompilationErrors.cpp
    ${CMAKE_CURRENT_LIST_DIR}/CompilationErrors.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Composition.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Composition.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ConsoleClass.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ConsoleClass.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ConstructorBinding.inl
    ${CMAKE_CURRENT_LIST_DIR}/Core.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Core.hpp
    ${CMAKE_CURRENT_LIST_DIR}/DataDrivenLexer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/DataDrivenLexer.hpp
    ${CMAKE_CURRENT_LIST_DIR}/DataDrivenLexer.inl
    ${CMAKE_CURRENT_LIST_DIR}/Debugging.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Debugging.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Delegate.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Delegate.hpp
    ${CMAKE_CURRENT_LIST_DIR}/DestructibleBuffer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/DestructibleBuffer.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Documentation.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Documentation.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ErrorDatabase.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ErrorDatabase.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Events.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Events.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ExecutableState.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ExecutableState.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Formatter.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Formatter.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ForwardDeclarations.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Function.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Function.hpp
    ${CMAKE_CURRENT_LIST_DIR}/General.hpp
    ${CMAKE_CURRENT_LIST_DIR}/GrammarConstants.cpp
    ${CMAKE_CURRENT_LIST_DIR}/GrammarConstants.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Handle.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Handle.hpp
    ${CMAKE_CURRENT_LIST_DIR}/HandleManager.cpp
    ${CMAKE_CURRENT_LIST_DIR}/HandleManager.hpp
    ${CMAKE_CURRENT_LIST_DIR}/HashContainer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/HashContainer.hpp
    ${CMAKE_CURRENT_LIST_DIR}/InstructionsEnum.inl
    ${CMAKE_CURRENT_LIST_DIR}/Json.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Json.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Library.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Library.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Matrix.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Matrix.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Members.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Members.hpp
    ${CMAKE_CURRENT_LIST_DIR}/MethodBinding.inl
    ${CMAKE_CURRENT_LIST_DIR}/MultiPrimitive.cpp
    ${CMAKE_CURRENT_LIST_DIR}/MultiPrimitive.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Opcode.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Opcode.hpp
    ${CMAKE_CURRENT_LIST_DIR}/OverloadResolver.cpp
    ${CMAKE_CURRENT_LIST_DIR}/OverloadResolver.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Parser.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Parser.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Precompiled.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Precompiled.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Project.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Project.hpp
    ${CMAKE_CURRENT_LIST_DIR}/RandomClass.cpp
    ${CMAKE_CURRENT_LIST_DIR}/RandomClass.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Range.hpp
    ${CMAKE_CURRENT_LIST_DIR}/RangeBinding.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Setup.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Setup.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Sha1.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Sha1.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Shared.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Shared.hpp
    ${CMAKE_CURRENT_LIST_DIR}/SharedReference.hpp
    ${CMAKE_CURRENT_LIST_DIR}/StaticLibrary.cpp
    ${CMAKE_CURRENT_LIST_DIR}/StaticLibrary.hpp
    ${CMAKE_CURRENT_LIST_DIR}/StringBuilderClass.cpp
    ${CMAKE_CURRENT_LIST_DIR}/StringBuilderClass.hpp
    ${CMAKE_CURRENT_LIST_DIR}/StringConstants.cpp
    ${CMAKE_CURRENT_LIST_DIR}/StringConstants.hpp
    ${CMAKE_CURRENT_LIST_DIR}/StubCode.cpp
    ${CMAKE_CURRENT_LIST_DIR}/StubCode.hpp
    ${CMAKE_CURRENT_LIST_DIR}/SyntaxTree.cpp
    ${CMAKE_CURRENT_LIST_DIR}/SyntaxTree.hpp
    ${CMAKE_CURRENT_LIST_DIR}/SyntaxTreeHelpers.cpp
    ${CMAKE_CURRENT_LIST_DIR}/SyntaxTreeHelpers.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Syntaxer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Syntaxer.hpp
    ${CMAKE_CURRENT_LIST_DIR}/TemplateBinding.cpp
    ${CMAKE_CURRENT_LIST_DIR}/TemplateBinding.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Timer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Timer.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Token.hpp
    ${CMAKE_CURRENT_LIST_DIR}/TokenReader.inl
    ${CMAKE_CURRENT_LIST_DIR}/Tokenizer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Tokenizer.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Traits.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Traits.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Type.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Type.hpp
    ${CMAKE_CURRENT_LIST_DIR}/UntypedBlockArray.hpp
    ${CMAKE_CURRENT_LIST_DIR}/VirtualMachine.cpp
    ${CMAKE_CURRENT_LIST_DIR}/VirtualMachine.hpp
    ${CMAKE_CURRENT_LIST_DIR}/VirtualMethodBinding.inl
    ${CMAKE_CURRENT_LIST_DIR}/VirtualTableBinding.inl
    ${CMAKE_CURRENT_LIST_DIR}/WebSocket.cpp
    ${CMAKE_CURRENT_LIST_DIR}/WebSocket.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Wrapper.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Wrapper.hpp
)

raverie_target_includes(Raverie
  PUBLIC
    Common
)
